# picoid

./: .gitignore  AUTHORS  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-assign.yml  docs.yml  python-publish.yml
docs/: api.rst  conf.py  index.rst  install.rst
docs/_templates/: versions.html
examples/: uuid4.py
src/cuuid/: __about__.py  __init__.pxd  __init__.py  cuuid.pxd  cuuid.pyi  hex.h  uuid.c  uuid.h  uuid.pxd
src/picoid/: __about__.py  __init__.pxd  __init__.py  hex.h  picoid.pyx  uuid.pxd
tests/: test_cuuid.py  test_picoid.py
